--- a/project/build.properties
+++ b/project/build.properties
@@ -1,7 +1,7 @@
 #Project properties
 #Sun Aug 08 21:36:02 EDT 2010
 project.organization=net.databinder
-project.name=giter8
+project.name=giter8 project
 sbt.version=0.7.4
 project.version=0.1.0-SNAPSHOT
 build.scala.versions=2.8.0
