--- a/project/build.properties
+++ b/project/build.properties
@@ -3,6 +3,6 @@
 project.organization=net.databinder
 project.name=giter8 project
 sbt.version=0.7.4
-project.version=0.1.1
+project.version=0.1.2-SNAPSHOT
 build.scala.versions=2.8.0
 project.initialize=false
