avoid ls, because ls.implicit.ly returns status 500

--- a/plugin/src/sbt-test/giter8/simple/src/main/g8/default.properties
+++ b/plugin/src/sbt-test/giter8/simple/src/main/g8/default.properties
@@ -1,3 +1,3 @@
 name=hello
-unfiltered = ls(unfiltered, unfiltered)
+unfiltered = maven(net.databinder, unfiltered_2.11)
 dispatch = maven(net.databinder.dispatch, dispatch-core_2.11)
