--- a/.travis.yml
+++ b/.travis.yml
@@ -12,4 +12,8 @@ before_script:
  - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -XX:MaxPermSize=256m -Xss2m -Dfile.encoding=UTF-8"
 
 after_success:
+- eval "$(ssh-agent -s)" #start the ssh agent
+- openssl aes-256-cbc -K $encrypted_e5f9765ae931_key -iv $encrypted_e5f9765ae931_iv -in deploy_rsa.enc -out deploy_rsa.enc -d
+- chmod 600 deploy_rsa
+- ssh-add deploy_rsa
 - test $TRAVIS_PULL_REQUEST == "false" && test $TRAVIS_BRANCH == "0.7.x" && sbt pushSiteIfChanged
