--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,7 @@ before_script:
  - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -XX:MaxPermSize=256m -Xss2m -Dfile.encoding=UTF-8"
 
 after_success:
+- export SBT_GHPAGES_COMMIT_MESSAGE="updated site https://github.com/foundweekends/giter8/commit/${TRAVIS_COMMIT}"
 - if [[ "${TRAVIS_PULL_REQUEST}" == "false" && "${TRAVIS_BRANCH}" == "0.7.x" && "${TRAVIS_REPO_SLUG}" == "foundweekends/giter8" ]]; then export PUBLISH_SITE=true; fi
 - test "${PUBLISH_SITE}" == "true" && eval "$(ssh-agent -s)" #start the ssh agent
 - test "${PUBLISH_SITE}" == "true" && openssl aes-256-cbc -K $encrypted_e5f9765ae931_key -iv $encrypted_e5f9765ae931_iv -in deploy_rsa.enc -out deploy_rsa -d
