--- a/examples/example-on-steroids/template/src/main/g8/default.properties
+++ b/examples/example-on-steroids/template/src/main/g8/default.properties
@@ -2,5 +2,6 @@ name = Example on Steroids
 package = com.example
 description = This is a giter8 example on steroids
 field_with_foo = This field include: $foo$
+scala_major_version = 2.12
 foo = I'm foo
-stable_foo_version = maven(com.example, foo, stable)
+stable_foo_version = maven(com.example, foo_$scala_major_version$, stable)
