--- a/.travis.yml
+++ b/.travis.yml
@@ -11,13 +11,13 @@ language: scala
 env:
   matrix:
     - SBT_VERSION=0.13.17
-    - SBT_VERSION=1.0.4
+    - SBT_VERSION=1.1.6
 
 before_script:
  - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -Xss2m -Dfile.encoding=UTF-8"
 
 script:
-  - sbt "-no-colors" "^^ $SBT_VERSION" ";scalafmtTest;plugin/scripted;scaffold/scripted;lib/test"
+  - sbt "-no-colors" "^^ $SBT_VERSION" ";scalafmtCheck;scalafmtSbtCheck;test:scalafmtCheck;plugin/scripted;scaffold/scripted;lib/test"
 
 after_success:
 - export SBT_GHPAGES_COMMIT_MESSAGE="updated site https://github.com/foundweekends/giter8/commit/${TRAVIS_COMMIT}"
