--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,11 @@ env:
     - SBT_VERSION=0.13.17
     - SBT_VERSION=1.1.6
 
+matrix:
+  include:
+  - env: SBT_VERSION=1.1.6
+    jdk: oraclejdk11
+
 before_script:
  - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -Xss2m -Dfile.encoding=UTF-8"
 
