--- a/.travis.yml
+++ b/.travis.yml
@@ -21,11 +21,11 @@ before_script:
  - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -Xss2m -Dfile.encoding=UTF-8"
 
 script:
-  - sbt "-no-colors" "^^ $SBT_VERSION" ";scalafmtCheck;scalafmtSbtCheck;test:scalafmtCheck;plugin/scripted;scaffold/scripted;lib/test"
+  - sbt "-no-colors" "^^ $SBT_VERSION" ";scalafmtCheckAll;plugin/scripted;scaffold/scripted;lib/test"
 
 after_success:
 - export SBT_GHPAGES_COMMIT_MESSAGE="updated site https://github.com/foundweekends/giter8/commit/${TRAVIS_COMMIT}"
-- > 
+- >
   if [[ "${TRAVIS_PULL_REQUEST}" == "false" && \
         "${TRAVIS_BRANCH}" == "master" && \
         "${TRAVIS_REPO_SLUG}" == "foundweekends/giter8" ]]; then
