--- a/.travis.yml
+++ b/.travis.yml
@@ -8,13 +8,13 @@ matrix:
   include:
   - env: SBT_VERSION=1.2.8
     jdk: openjdk8
-    script: sbt "-no-colors" "^^ $SBT_VERSION" ";scalafmtCheckAll;plugin/scripted;scaffold/scripted;lib/test;app/compile"
+    script: sbt "-no-colors" "^^ $SBT_VERSION" ";publishLocal;scalafmtCheckAll;plugin/scripted;scaffold/scripted;lib/test;app/compile"
   - name: "Scala 2.13"
     script:
     - sbt "++ 2.13.1" app/test lib/test
   - env: SBT_VERSION=1.3.3
     jdk: openjdk11
-    script: sbt "-no-colors" "^^ $SBT_VERSION" ";plugin/scripted;scaffold/scripted;lib/test;app/compile"
+    script: sbt "-no-colors" "^^ $SBT_VERSION" ";publishLocal;plugin/scripted;scaffold/scripted;lib/test;app/compile"
 
 before_script:
  - export JVM_OPTS="-Xms1024m -Xmx1024m -XX:ReservedCodeCacheSize=128m -Xss2m -Dfile.encoding=UTF-8"
