--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -29,6 +29,8 @@ jobs:
       with:
         java-version: "adopt@1.${{ matrix.java }}"
     - uses: actions/checkout@v2.3.4
+      with:
+        fetch-depth: 10
     - uses: coursier/cache-action@v5
     - shell: bash
       run: |
