--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -1,1 +1,9 @@
 updates.limit = 3
+
+updates.pin = [
+  {
+    // jgit 6.x require JDK 11
+    groupId = "org.eclipse.jgit"
+    version = "5."
+  }
+]
