--- a/.github/workflows/scala-steward.yml
+++ b/.github/workflows/scala-steward.yml
@@ -9,16 +9,15 @@ jobs:
   scala-steward:
     runs-on: ubuntu-latest
     timeout-minutes: 30
+    if: ${{ github.repository_owner == 'foundweekends' }}
     steps:
     - name: Generate token
       id: generate_token
       uses: tibdex/github-app-token@v1
-      if: ${{ !github.event.repository.fork }}
       with:
         app_id: 89697
         private_key: ${{ secrets.FOUNDWEEKENDS_BOT_KEY }}
     - name: Launch Scala Steward
-      if: ${{ !github.event.repository.fork }}
       uses: scala-steward-org/scala-steward-action@v2.16.0
       with:
         github-token: ${{ steps.generate_token.outputs.token }}
