fix scalafmt check in CI

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -37,7 +37,8 @@ jobs:
             sbt -v \
             -no-colors \
             publishLocal \
-            scalafmtCheckAll \
+            scalafmtSbtCheck \
+            "+ scalafmtCheckAll" \
             launcher/test \
             plugin/scripted \
             scaffold/scripted \
