--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -25,9 +25,10 @@ jobs:
             name: test_all
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: olafurpg/setup-scala@v13
+    - uses: actions/setup-java@v3
       with:
-        java-version: "adopt@1.${{ matrix.java }}"
+        java-version: ${{ matrix.java }}
+        distribution: adopt
     - uses: actions/checkout@v3
     - uses: coursier/cache-action@v6
     - shell: bash
@@ -57,9 +58,10 @@ jobs:
     timeout-minutes: 30
     runs-on: ubuntu-latest
     steps:
-    - uses: olafurpg/setup-scala@v13
+    - uses: actions/setup-java@v3
       with:
-        java-version: "adopt@1.8"
+        java-version: 8
+        distribution: adopt
     - uses: actions/checkout@v3
       with:
         fetch-depth: 10
