ignore "scala-parser-combinators" update by scala-steward

--- a/.scala-steward.conf
+++ b/.scala-steward.conf
@@ -7,3 +7,10 @@ updates.pin = [
     version = "5."
   }
 ]
+
+updates.ignore = [
+  {
+    // https://github.com/foundweekends/giter8/pull/725
+    groupId = "org.scala-lang.modules"
+  }
+]
