Update scalafmt settings
use new syntax. prepare Scala 3.4

--- a/.scalafmt.conf
+++ b/.scalafmt.conf
@@ -2,4 +2,8 @@ version = 3.7.17
 style = default
 maxColumn = 120
 align.tokens = ["|", "=>", "<-", "=", "\"\"\""]
-runner.dialect = scala213
+runner.dialect = scala213Source3
+rewrite.scala3.convertToNewSyntax = true
+runner.dialectOverride.allowSignificantIndentation = false
+runner.dialectOverride.allowAsForImportRename = false
+runner.dialectOverride.allowStarWildcardImport = false
